# isim

./: README.md  pyproject.toml  requirements.txt
sim/: .plots.py.swp  __main__.py  plots.py  sim1.py
