[tool.poetry]
name = "issim"
version = "0.1.0"
description = ""
authors = ["Pacidus <pacidus@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Pacidus/issim"
keywords = ["physics", "ising", "montecarlo", "ising model", "metropolis algorithm"]

[tool.poetry.dependencies]
python = "^3.7"
isingm = "^1.0.3"
numpy = "^1.18.3"
matplotlib = "^3.2.1"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
